--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -81,9 +81,10 @@ body {
   background-color: aquamarine;
 }
 
-.h{
-    color: red
+.h {
+  color: red;
 }
-.indentation{
-    margin-left: 100px
+
+.indentation {
+  margin-left: 100px;
 }
